--- a/style.css
+++ b/style.css
@@ -273,15 +273,203 @@ header {
 
 
 /*кінець шапки*/
+/* початок тіла*/
 .main {
 	min-height: 1712px;
-	background-color: #F5DEB3;
+
+	box-sizing: border-box;
+	border: 1px dotted black;
 }
+
+.searc_main_block {
+	display: flex;
+	max-width: 1000px;
+	height: 31px;
+	box-sizing: border-box;
+	border: 1px dotted white;
+	margin: 0 auto;
+	margin-top: 6px;
+}
+.searc_main_block div {
+	height: 31px;
+	width: 108px;
+	background-image: linear-gradient(to top, #2b2b2b, #545454);
+	border-top-left-radius: 7px;
+	border-bottom-left-radius: 7px;
+  text-align: center;
+  padding-top:  4.5px;
+  box-sizing: border-box;
+  margin-right: 2px;
+}
+.searc_main_block div span{
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: bold;
+	color: #fb6b00;
+	padding-top:  16px;
+}
+.searc_main_block form input{
+	width: 890px;
+	height: 25px;
+ border-color: #cecece;
+ box-shadow: inset 3px 3px 4px rgba(206, 206, 206, .75);;
+ border-top: 0.4px;
+ border-left: 0.4px;
+}
+
+
+.searc_main_block form  input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #000000;
+}
+
+
+.searc_main_block form  input:-moz-placeholder {
+	color: #000000;
+}
+.searc_main_block form  input:-ms-input-placeholder { /* IE 10+ */
+  color: #000000;
+}
+
+.first_block_main {
+	max-width: 1000px;
+	display: flex;
+	margin: 0 auto;
+}
+.gallery_1_main, .news_1_main, .contacts_1_main {
+	box-sizing: border-box;
+  border: 1px dotted black;
+	height: 523px;
+
+
+}
+.gallery_1_main {
+	width: 308px;
+	margin-right: 21px;
+}
+
+.news_1_main {
+	width: 340px;
+	margin-right: 24px;
+}
+.contacts_1_main {
+	width: 307px;
+}
+.rec {
+	max-width: 1000px;
+	height: 230px;
+	box-sizing: border-box;
+	border: 1px dotted black;
+	margin: 0 auto;
+	margin-top: 10px;
+}
+.news_header_1 {
+	max-width: 1000px;
+	height: 46px;
+	border: 1px dotted black;
+	margin: 0 auto;
+	margin-top: 15px;
+
+}
+.news_main_1 {
+	display: flex;
+	max-width: 1000px;
+	height: 253px;
+	box-sizing: border-box;
+	border: 1px dotted black;
+	margin: 0 auto;
+ margin-top: 11px;
+}
+.block_1_news_1 {
+	width: 404px;
+	height: 229px;
+	box-sizing: border-box;
+	border: 1px dotted black;
+	margin-left: 14px;
+	margin-top: 7px;
+
+}
+.video_block {
+	width: 200px;
+	height: 207px;
+	box-sizing: border-box;
+	border: 1px dotted black;
+	margin-top: 18px;
+	margin-left: 33px;
+}
+.right_block_1 {
+	width: 307px;
+	height: 205px;
+	box-sizing: border-box;
+	border: 1px dotted black;
+	margin-left: 42px;
+	margin-top: 1px;
+}
+
+/**/
 footer {
 	height: 274px;
-	background-color: #87CEEB;
+
 }
 .footer_block_1 {
 	height: 200px;
 	background-image: linear-gradient(to top, #1e1e1e, #484848);
+}
+.footer_text_block {
+	display: flex;
+	width: 1000px;
+	height: 100%;
+	margin: 0 auto;
+	box-sizing: border-box;
+	border: 1px dotted white;
+}
+
+.text_block_1 {
+	width: 149px;
+	 height: 182px;
+	box-sizing: border-box;
+	border: 1px dotted red;
+	margin-left: 14px;
+	margin-top: 7px;
+}
+.text_block_2 {
+	width: 139px;
+	height: 182px;
+	box-sizing: border-box;
+	border: 1px dotted red;
+	margin-left: 14px;
+	margin-top: 7px;
+}
+.text_block_3 {
+	width: 139px;
+	height: 182px;
+	box-sizing: border-box;
+	border: 1px dotted red;
+	margin-left: 33px;
+	margin-top: 7px;
+}
+.text_block_4 {
+	width: 126px;
+	height: 182px;
+	box-sizing: border-box;
+	border: 1px dotted red;
+	margin-top: 7px;
+	margin-left: 248px;
+}
+.text_block_5 {
+	width: 161px;
+	height: 117px;
+	margin-left: 37px;
+	margin-right: -163px;
+	box-sizing: border-box;
+	border: 1px dotted red;
+	margin-top: 24px;
+
+}
+.info_site {
+	width: 269px;
+	height: 35px;
+	box-sizing: border-box;
+	border: 3px dotted red;
+	margin-left: 20px;
+	margin-top: 15px;
 }
